[package]
name = "benchman"
version = "0.2.1"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A benchmark tool that focuses on one-shot benchmark"
repository = "https://github.com/akiradeveloper/benchman"
readme = "README.md"
categories = ["development-tools"]
keywords =  ["benchmark"]

[dependencies]
colored = "2"
indexmap = "1.7"